# data-structures

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/data-structures/list/: double_linked_list.h  loop_double_linked_list.h  loop_single_linked_list.h  single_linked_list.h
include/data-structures/queue/: circular_queue.h  queue.h
include/data-structures/stack/: array_stack.h  linked_stack.h  stack.h
include/data-structures/tree/: binary_tree.h
include/data-structures/util/: error_code.h  iterator.h  nodes.c  nodes.h
src/: array_stack.c  binary_tree.c  circular_queue.c  double_linked_list.c  loop_double_linked_list.c  loop_single_linked_list.c  queue.c  single_linked_list.c  stack.c
src/data-structures/base/: array.c  array.h  nodes.c  nodes.h
src/data-structures/list/: loop_single_linked_list.c  loop_single_linked_list.h  single_linked_list.c  single_linked_list.h
src/data-structures/memory/: allocator.h
src/data-structures/queue/: queue.c  queue.h
src/data-structures/stack/: stack.c  stack.h
src/data-structures/tree/: avl_tree.c  avl_tree.h  binary_search_tree.c  binary_search_tree.h  binary_tree.c  binary_tree.h  heap.c  heap.h
src/data-structures/util/: allocator.h  error_code.h  generic.c  generic.h  iterator.h  nodes.c
test/: test_avl_tree.c  test_binary_search_tree.c  test_binary_tree.c  test_heap.c  test_queue.c  test_single_linked_list.c  test_stack.c  util.h
